--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -5,8 +5,17 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<script src="./js/jquery-3.1.1.min.js"></script>
         <link rel="stylesheet" type="text/css" href="./css/main.css">
+        <style>
+			#shutdown {
+				position: absolute;
+				bottom: 0px;
+				right: 0px;
+				z-index: 10;
+			}
+        </style>
 	</head>
-	<body>		
+	<body>
+		<button id="shutdown">Shutdown</button>		
 		<div id="container"></div>                
 		<script type="text/javascript" src="js/form-handler.js"></script>
 		<script src="./js/virtualjoystick.js"></script>
