--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -4,19 +4,23 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<script src="./js/jquery-3.1.1.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="./css/main.css">
+       		<link rel="stylesheet" type="text/css" href="./css/main.css">
+		<link rel="stylesheet" type="text/css" href="./css/ionicons.min.css">
         <style>
 			#shutdown {
 				position: absolute;
-				bottom: 0px;
-				right: 0px;
+				bottom: 20%;
+				right: 48%;
 				z-index: 10;
+				font-size: 4em;
+				color: #0f0
 			}
         </style>
 	</head>
 	<body>
-		<button id="shutdown">Shutdown</button>		
-		<div id="container"></div>                
+		<div id="container">
+		<span class="ion-power" id="shutdown"><i></i></span>
+		</div>                
 		<script type="text/javascript" src="js/form-handler.js"></script>
 		<script src="./js/virtualjoystick.js"></script>
 		<script src="./js/main.js"></script>
