--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -32,6 +32,57 @@
         </style>
 	</head>
 	<body>
+		<div id="dockContainer">
+<div id="dockWrapper">
+<ul class="osx-dock">
+  <li class="active">
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/linkedin-icon.png" /></a>
+  </li>
+  <li>
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/facebook-icon.png" /></a>
+  </li>
+    <li>
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/google-icon.png" /></a>
+  </li>
+    <li>
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/chrome-icon.png" /></a>
+  </li>
+    <li>
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/safari-icon.png" /></a>
+  </li>
+      <li>
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/lastfm-icon.png" /></a>
+  </li>
+      <li>
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/notable-icon.png" /></a>
+  </li>
+    <li>
+
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/facebook-icon.png" /></a>
+  </li>
+    <li>
+
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/google-icon.png" /></a>
+  </li>
+    <li>
+
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/chrome-icon.png" /></a>
+  </li>
+    <li>
+
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/safari-icon.png" /></a>
+  </li>
+      <li>
+
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/lastfm-icon.png" /></a>
+  </li>
+      <li>
+
+    <a href="#" title=""><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/151734/notable-icon.png" /></a>
+  </li>
+</ul>
+  </div>
+</div>
 		<div id="container">
 		</div>
 		<input type="range" id="slider" min=".4" max="1" step=".01" value="1">		
