--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -8,8 +8,6 @@
 	<link href="./css/main.css" rel="stylesheet" type="text/css">
 	<link href="./css/ionicons.min.css" rel="stylesheet" type="text/css">
 	<link href="./css/preloader.css" rel="stylesheet" type="text/css">
-	<script src="./js/preloader.js">
-	</script>
 	<style>
 	           .osx-dock li a:not(.ionic) {
 	               position: absolute;
@@ -44,14 +42,6 @@
 	<title></title>
 </head>
 <body>
-	<!-- preloader -->
-	<div id="wrap"></div>
-	<script>
-	       var preloader = new MyPreloader({
-	           baseColor: '#0f0',
-	           ringColor: $("body").css("background")
-	       });
-	</script> <!-- end preloader -->
 	<div id="dockContainer">
 		<div id="dockWrapper">
 			<ul class="osx-dock">
@@ -83,6 +73,7 @@
 	<div id="container"></div>
 	<script src="js/form-handler.js" type="text/javascript">
 	</script> 
+	<script src="./js/preloader.js"></script>
 	<script src="./js/virtualjoystick.js">
 	</script> 
 	<script src="./js/main.js">
