--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
-	<script src="./js/jquery-3.1.1.min.js">
-	</script>
-	<link href="./css/main.css" rel="stylesheet" type="text/css">
-	<link href="./css/ionicons.min.css" rel="stylesheet" type="text/css">
-	<link href="./css/preloader.css" rel="stylesheet" type="text/css">
-	<style>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<script src="./js/jquery-3.1.1.min.js"></script>
+       	<link rel="stylesheet" type="text/css" href="./css/main.css">
+		<link rel="stylesheet" type="text/css" href="./css/ionicons.min.css">
+		<link rel="stylesheet" type="text/css" href="./css/preloader.css">
+		<style>
 	           .osx-dock li a:not(.ionic) {
 	               position: absolute;
 	               z-index: 10;
@@ -38,10 +36,15 @@
 	               z-index: 10;
 	               font-size: 2.5em;
 	           }
-	</style>
-	<title></title>
-</head>
-<body>
+		</style>
+		<title></title>
+	</head>
+	<body>
+	
+	<!-- preloader -->
+	<script src="./js/preloader.js"></script>
+	<!-- end preloader -->
+
 	<div id="dockContainer">
 		<div id="dockWrapper">
 			<ul class="osx-dock">
@@ -71,12 +74,10 @@
 		</div>
 	</div>
 	<div id="container"></div>
-	<script src="js/form-handler.js" type="text/javascript">
-	</script> 
-	<script src="./js/preloader.js"></script>
-	<script src="./js/virtualjoystick.js">
-	</script> 
-	<script src="./js/main.js">
-	</script>
-</body>
+
+
+		<script type="text/javascript" src="js/form-handler.js"></script>
+		<script src="./js/virtualjoystick.js"></script>
+		<script src="./js/main.js"></script>
+	</body>
 </html>
