--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -14,13 +14,16 @@
 	               width: 2em;
 	               height: 2em;
 	           }
-	           #shutdown {
-	               position: absolute;
-	               left: 40%;
-	               bottom: -15%;
+	           .shutdown {
 	               z-index: 10;
 	               font-size: 2.5em;
 	           }
+			#shutdown_fake {
+				position: absolute;
+	          	left: 40%;
+	            bottom: -15%;
+			}
+				
 	           #slider {
 	               position: absolute;
 	               bottom: 30%;
@@ -45,6 +48,14 @@
 	<script src="./js/preloader.js"></script>
 	<!-- end preloader -->
 
+	<div id="shutdown_modal" class="modalDialog">
+		<div>
+			<a href="#close" title="Close" class="close">X</a>
+			<h2>Confirm Shutdown</h2>
+			<p>Only click here if you're sure you want to shut down the MTAV:</p>
+			<a class="ion-power ionic shutdown" href="#close" id="shutdown_real" title="Shutdown"><i></i></a>
+		</div>
+	</div>
 	<div id="dockContainer">
 		<div id="dockWrapper">
 			<ul class="osx-dock">
@@ -64,10 +75,10 @@
 					<a href="#" id="settings" title=""><img src="images/settings.png"></a>
 				</li>
 				<li>
-					<a class="ion-power ionic" href="#" id="shutdown" title=""><i></i></a>
+					<a class="ion-power ionic shutdown" href="#shutdown_modal" id="shutdown_fake" title="Shutdown"><i></i></a>
 				</li>
 				<li>
-					<a class="ion-ios-lightbulb-outline ionic" href="#" id="invert" title=""><i></i></a>
+					<a class="ion-ios-lightbulb-outline ionic" href="#" id="invert" title="Grayscale Mode"><i></i></a>
 				</li>
 				<li><input id="slider" max="1" min=".4" step=".01" type="range" value="1"></li>
 			</ul>
