--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -73,6 +73,9 @@
 					<a href="#" id="camera" title=""><img src="images/camera.png"></a>
 				</li>
 				<li>
+					<a href="#" id="radar" title=""><img src="images/radar.png"></a>
+				</li>
+				<li>
 					<a href="#" id="settings" title=""><img src="images/settings.png"></a>
 				</li>
 				<li>
