--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -6,6 +6,7 @@
        	<link rel="stylesheet" type="text/css" href="./css/main.css">
 		<link rel="stylesheet" type="text/css" href="./css/ionicons.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/preloader.css">
+		<link rel="stylesheet" type="text/css" href="./css/radar.css">
 		<style>
 	           .osx-dock li a:not(.ionic) {
 	               position: absolute;
@@ -48,7 +49,7 @@
 	<!-- preloader -->
 	<script src="./js/preloader.js"></script>
 	<!-- end preloader -->
-
+	
 	<div id="shutdown_modal" class="modalDialog">
 		<div>
 			<a href="#close" title="Close" class="close">X</a>
@@ -73,7 +74,7 @@
 					<a href="#" id="camera" title=""><img src="images/camera.png"></a>
 				</li>
 				<li>
-					<a href="#" id="radar" title=""><img src="images/radar.png"></a>
+					<a href="#" id="metal" title=""><img src="images/radar.png"></a>
 				</li>
 				<li>
 					<a href="#" id="settings" title=""><img src="images/settings.png"></a>
@@ -88,10 +89,11 @@
 			</ul>
 		</div>
 	</div>
-	
 	<div id="container"></div>
+		<canvas id="radar"></canvas>
 		<script type="text/javascript" src="js/form-handler.js"></script>
 		<script src="./js/virtualjoystick.js"></script>
 		<script src="./js/main.js"></script>
+		<script src="./js/radar.js"></script>
 	</body>
 </html>
