--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -40,7 +40,20 @@
 	               z-index: 10;
 	               font-size: 2.5em;
 	           }
-			   
+	           /* video stuff */
+				#videoCanvas {
+					/* Always stretch the canvas to 640x480, regardless of its
+					internal size. */
+					width: 320px;
+					height: 240px;
+					
+					position: absolute;
+					top:0;
+					bottom: 0;
+					left: 0;
+					right: 0;
+					margin:auto;
+				}
 		</style>
 		<title></title>
 	</head>
@@ -90,10 +103,15 @@
 		</div>
 	</div>
 	<div id="container"></div>
-		<canvas id="radar"></canvas>
-		<script type="text/javascript" src="js/form-handler.js"></script>
-		<script src="./js/virtualjoystick.js"></script>
-		<script src="./js/main.js"></script>
-		<script src="./js/radar.js"></script>
+	<canvas id="radar"></canvas>
+	<canvas id="videoCanvas" width="320" height="240" style="z-index: -1"></canvas>
+
+	<script type="text/javascript" src="js/form-handler.js"></script>
+	<script src="./js/virtualjoystick.js"></script>
+	<script src="./js/radar.js"></script>
+	<script type="text/javascript" src="jsmpg.js"></script>
+	<script src="./js/main.js"></script>
+
 	</body>
 </html>
+
