--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -19,6 +19,9 @@
 	               z-index: 10;
 	               font-size: 2.5em;
 	           }
+	           .ion-arrow-up-b, .ion-arrow-down-b {
+				   width: 50%;
+			   }
 	           /* video stuff */
 				#videoCanvas {
 					/* Always stretch the canvas to 640x480, regardless of its
@@ -75,10 +78,8 @@
 			<span class="arrow" id="raise_elbow"><i class="ion-arrow-up-b"></i></span><br>
 			<span class="arrow" id="lower_elbow"><i class="ion-arrow-down-b"></i></span><br>
 			<span class="control_label">Claw</span>
-			<span class="leftlabel">Closed</span>
-			<input type="range" id="claw" name="claw" min="0" max="100">
-			<span class="rightlabel">Open</span><br>
-
+			<span class="arrow" id="open_claw"><i class="ion-arrow-up-b"></i></span><br>
+			<span class="arrow" id="close_claw"><i class="ion-arrow-down-b"></i></span><br>
 		</fieldset>
 
 	</div>
