Raise/lower camx/camy

--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -62,8 +62,6 @@
 		<!-- end preload joystick -->
 	</div>
 	<div class="actions" id="steering_action">
-		Steering...
-
 	</div>
 	<div class="actions" id="arm_action">
 		<fieldset class="arm_controls">
@@ -83,8 +81,13 @@
 
 	</div>
 	<div class="actions" id="camera_action">
-		Camera...
-
+		<fieldset class="cam_controls">
+			<legend>Camera Controls</legend><br>
+			<span class="arrow" id="raise_camy"><i class="ion-arrow-up-b"></i></span><br>
+			<span class="arrow" id="lower_camx"><i class="ion-arrow-left-b"></i></span>
+			<span class="arrow" id="raise_camx"><i class="ion-arrow-right-b"></i></span><br>
+			<span class="arrow" id="lower_camy"><i class="ion-arrow-down-b"></i></span><br>
+		</fieldset>
 	</div>
 	<div class="actions" id="metal_action">
 		<fieldset class="md_controls">
