--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -12,7 +12,6 @@
 	               position: absolute;
 	               z-index: 10;
 	               font-size: 2.5em;
-	               width: 2em;
 	               height: 2em;
 	           }
 	           .shutdown {
@@ -105,8 +104,10 @@
 			<span class="control_label">Page Background</span>
 			<input type="color" id="bg_color">
 			<span class="control_label">Text Color</span>
-			<input type="color" id="text_color">
-
+			<input type="color" id="text_color"><br>
+			<span class="control_label">Joystick Size</span>
+			<span class="arrow" id="decrease_joystick"><i class="ion-arrow-up-b"></i></span><br>
+			<span class="arrow" id="increase_joystick"><i class="ion-arrow-down-b"></i></span><br>
 		</fieldset>
 
 	</div>
@@ -148,4 +149,3 @@
 
 	</body>
 </html>
-
