--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -70,17 +70,24 @@
 	</div>
 	<div class="actions" id="arm_action">
 		<fieldset class="arm_controls">
-			<legend>Arm Controls</legend><br>
+			<legend>Arm Controls</legend>
 			<span class="control_label" id="straight_arm">Click to make arm stand up</span>
-			<span class="control_label">Shoulder Joint</span>
+			<ul>
+			<li>
+			<span class="control_label">Shoulder</span>
 			<span class="arrow" id="raise_shoulder"><i class="ion-arrow-up-b"></i></span><br>
 			<span class="arrow" id="lower_shoulder"><i class="ion-arrow-down-b"></i></span><br>
-			<span class="control_label">Elbow Joint</span>
+			</li>
+			<li>
+			<span class="control_label">Elbow</span>
 			<span class="arrow" id="raise_elbow"><i class="ion-arrow-up-b"></i></span><br>
 			<span class="arrow" id="lower_elbow"><i class="ion-arrow-down-b"></i></span><br>
+			</li>
+			<li>
 			<span class="control_label">Claw</span>
 			<span class="arrow" id="open_claw"><i class="ion-arrow-up-b"></i></span><br>
 			<span class="arrow" id="close_claw"><i class="ion-arrow-down-b"></i></span><br>
+			</li>
 		</fieldset>
 
 	</div>
