--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -71,7 +71,8 @@
 	<div class="actions" id="arm_action">
 		<fieldset class="arm_controls">
 			<legend>Arm Controls</legend>
-			<span class="control_label" id="straight_arm">Click to make arm stand up</span>
+			<span class="control_label" id="arm_front">Arm Front</span>
+			<span class="control_label" id="arm_back">Arm Back</span>
 			<ul>
 			<li>
 			<span class="control_label">Shoulder</span>
